[project]
name = "psf_utils"
version = "1.8"
description = "Cadence PSF file utilities"
readme = "README.rst"
keywords = ["cadence", "spectre", "PSF", "simulation"]
authors = [
    {name = "Ken Kundert"},
    {email = "psf_utils@nurdletech.com"}
]
classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
        'Natural Language :: English',
        'Operating System :: POSIX :: Linux',
        'Programming Language :: Python :: 3',
        'Topic :: Utilities',
        'Topic :: Scientific/Engineering',
]
requires-python = ">=3.6"
dependencies = [
    'docopt',
    'inform',
    'matplotlib',
    'numpy',
    'ply==3.10',
    'quantiphy',
]

[project.scripts]
list-psf = "psf_utils.list:list_signals"
show-psf = "psf_utils.show:show_signals"

[project.urls]
repository = "https://github.com/kenkundert/psf_utils"

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"
